--- a/Firebase/functions/package.json
+++ b/Firebase/functions/package.json
@@ -13,11 +13,10 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "src/index.ts",
   "dependencies": {
-    "express": "^4.18.2",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
