--- a/Firebase/functions/package.json
+++ b/Firebase/functions/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "16"
   },
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "dependencies": {
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1"
