--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "puppeteer": "^19.5.2"
